@@ -4342,14 +4342,21 @@ name|ErrorCode
 operator|.
 name|BAD_REQUEST
 argument_list|,
-literal|"Invalid core: "
-operator|+
+name|SolrIdentifierValidator
+operator|.
+name|getIdentifierMessage
+argument_list|(
+name|SolrIdentifierValidator
+operator|.
+name|IdentifierType
+operator|.
+name|CORE
+argument_list|,
 name|dcore
 operator|.
 name|getName
 argument_list|()
-operator|+
-literal|". Core names must consist entirely of periods, underscores, and alphanumerics"
+argument_list|)
 argument_list|)
 throw|;
 block|}
@@ -5313,11 +5320,18 @@ name|ErrorCode
 operator|.
 name|BAD_REQUEST
 argument_list|,
-literal|"Invalid core: "
-operator|+
+name|SolrIdentifierValidator
+operator|.
+name|getIdentifierMessage
+argument_list|(
+name|SolrIdentifierValidator
+operator|.
+name|IdentifierType
+operator|.
+name|CORE
+argument_list|,
 name|toName
-operator|+
-literal|". Core names must consist entirely of periods, underscores, and alphanumerics"
+argument_list|)
 argument_list|)
 throw|;
 block|}
