@@ -33,7 +33,7 @@ comment|/*  * Licensed to the Apache Software Foundation (ASF) under one or more
 end_comment
 
 begin_comment
-comment|/**  * Ensures that provided identifiers align with Solr's recommendations/requirements for choosing  * collection, core, etc identifiers.  *    * Identifiers are allowed to contain underscores, periods, and alphanumeric characters.   */
+comment|/**  * Ensures that provided identifiers align with Solr's recommendations/requirements for choosing  * collection, core, etc identifiers.  *    * Identifiers are allowed to contain underscores, periods, hyphens, and alphanumeric characters.  */
 end_comment
 
 begin_class
@@ -52,9 +52,26 @@ name|Pattern
 operator|.
 name|compile
 argument_list|(
-literal|"^[\\._A-Za-z0-9]*$"
+literal|"^(?!\\-)[\\._A-Za-z0-9\\-]*$"
 argument_list|)
 decl_stmt|;
+DECL|enum|IdentifierType
+specifier|public
+enum|enum
+name|IdentifierType
+block|{
+DECL|enum constant|SHARD
+DECL|enum constant|COLLECTION
+DECL|enum constant|CORE
+DECL|enum constant|ALIAS
+name|SHARD
+block|,
+name|COLLECTION
+block|,
+name|CORE
+block|,
+name|ALIAS
+block|}
 DECL|method|validateShardName
 specifier|public
 specifier|static
@@ -140,6 +157,47 @@ return|;
 block|}
 return|return
 literal|true
+return|;
+block|}
+DECL|method|getIdentifierMessage
+specifier|public
+specifier|static
+name|String
+name|getIdentifierMessage
+parameter_list|(
+name|IdentifierType
+name|identifierType
+parameter_list|,
+name|String
+name|name
+parameter_list|)
+block|{
+return|return
+literal|"Invalid "
+operator|+
+name|identifierType
+operator|.
+name|toString
+argument_list|()
+operator|.
+name|toLowerCase
+argument_list|()
+operator|+
+literal|": "
+operator|+
+name|name
+operator|+
+literal|". "
+operator|+
+name|identifierType
+operator|.
+name|toString
+argument_list|()
+operator|.
+name|toLowerCase
+argument_list|()
+operator|+
+literal|" names must consist entirely of periods, underscores, hyphens, and alphanumerics"
 return|;
 block|}
 block|}
