@@ -1031,7 +1031,7 @@ name|exceptionMessage
 operator|.
 name|contains
 argument_list|(
-literal|"must consist entirely of periods, underscores, and alphanumerics"
+literal|"must consist entirely of periods, underscores, hyphens, and alphanumerics"
 argument_list|)
 argument_list|)
 expr_stmt|;
@@ -1110,7 +1110,7 @@ name|exceptionMessage
 operator|.
 name|contains
 argument_list|(
-literal|"must consist entirely of periods, underscores, and alphanumerics"
+literal|"must consist entirely of periods, underscores, hyphens, and alphanumerics"
 argument_list|)
 argument_list|)
 expr_stmt|;
